--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <title>d-movie</title>
+    <title>Must Watch</title>
     <style>
       *,
       *::before,
