--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover popular movies"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -49,16 +49,82 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 1.5;
-        color: #FFF;
+        color: white;
         text-align: left;
-        background-color: #000;
+        background-color: black;
         cursor: default;
+      }
+
+      .splash {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: black;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+        transition: opacity .3s ease;
+      }
+
+      .splash::before {
+        content: ' ';
+        font-family: 'Oswald', sans-serif;
+        font-weight: 300;
+      }
+
+      .splash svg {
+        width: 192px;
+        animation: splash-enter 1s;
+      }
+
+      #root.ready + .splash  {
+        pointer-events: none;
+        opacity: 0;
+      }
+
+      @keyframes splash-enter {
+        from {
+          opacity: 0;
+        }
+
+        to {
+          opacity: 1;
+        }
       }
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
+    </div>
+    <div class="splash">
+      <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="256.000000pt" height="256.000000pt" viewBox="0 0 256.000000 256.000000" preserveAspectRatio="xMidYMid meet">
+      <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="#FFFFFF" stroke="none">
+        <path d="M205 2283 c-44 -23 -65 -44 -86 -85 -18 -36 -19 -73 -19 -918 0 -845
+        1 -882 19 -918 23 -46 46 -67 94 -87 32 -13 162 -15 1069 -15 981 0 1035 1
+        1073 19 48 22 69 44 90 94 13 32 15 146 15 907 0 761 -2 875 -15 907 -20 48
+        -41 71 -87 94 -36 18 -76 19 -1080 19 -932 -1 -1046 -2 -1073 -17z m395 -110
+        c0 -5 -23 -82 -50 -173 -28 -91 -60 -195 -71 -232 l-20 -68 -119 0 -120 0 0
+        222 c0 192 2 224 17 240 14 16 34 18 190 18 95 0 173 -3 173 -7z m686 -10 c-3
+        -10 -32 -110 -66 -223 -34 -113 -63 -213 -66 -222 -5 -17 -27 -18 -285 -18
+        -179 0 -279 4 -279 10 0 8 116 399 135 458 3 9 69 12 285 12 263 0 281 -1 276
+        -17z m684 11 c0 -5 -105 -359 -131 -441 l-11 -33 -274 0 c-200 0 -274 3 -274
+        12 0 9 120 414 135 456 3 9 69 12 280 12 151 0 275 -3 275 -6z m352 -11 c16
+        -15 18 -36 18 -240 l0 -223 -190 0 c-133 0 -190 3 -190 11 0 9 118 407 135
+        457 7 20 203 17 227 -5z m18 -1165 c0 -527 -2 -583 -17 -600 -15 -17 -61 -18
+        -1041 -18 -940 0 -1027 1 -1044 17 -17 15 -18 47 -18 600 l0 583 1060 0 1060
+        0 0 -582z"/>
+        <path d="M1093 1316 l-28 -24 -3 -334 c-2 -302 -1 -336 15 -368 21 -41 76 -61
+        115 -43 41 20 419 344 430 369 9 19 8 31 -3 54 -12 24 -325 295 -409 353 -35
+        24 -84 22 -117 -7z m257 -265 c69 -57 125 -107 125 -111 0 -6 -187 -165 -268
+        -229 -16 -13 -17 0 -17 229 0 229 1 242 17 229 10 -8 74 -61 143 -118z"/>
+        </g>
+      </svg>
+
     </div>
   </body>
 </html>
